# quackstats

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs  wasm_lib.rs
src/common/: grouping.rs  mod.rs  params.rs  table_reader.rs  types.rs
src/forecast/: mod.rs  models.rs  params.rs
src/seasonality/: detection.rs  mod.rs  params.rs
test/sql/: forecast_grouped.test  forecast_models.test  forecast_single.test  quackstats.test  seasonality.test
