[package]
name = "quackstats"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Time series forecasting and statistics for DuckDB"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
name = "quackstats"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "=1.4.3", features = ["loadable-extension", "vtab"] }
libduckdb-sys = "=1.4.3"
augurs-ets = "0.10"
augurs-core = "0.10"
augurs-seasons = "0.10"
chrono = "0.4"
linregress = "0.5"
statrs = "0.18"
levenberg-marquardt = "0.15"
nalgebra = { version = "0.34", default-features = false }
